--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset=utf-8 />
 		<title>Bengaluru Marathon</title>
 		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-		<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
-		<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+		<script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.2/mapbox.js'></script>
+		<link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.2/mapbox.css' rel='stylesheet' />
 		<style>
   			body { margin:0; padding:0; }
   			#map { position:absolute; top:0; bottom:0; width:100%; }
@@ -16,7 +16,7 @@
 		<div id='map'></div>
 		<script>
 			L.mapbox.accessToken = 'pk.eyJ1IjoiZ3llbnVtdWxhIiwiYSI6ImNpZzIyMjZoaDE2aTV2NW01dnk0d2dvamMifQ.7j58X0hkqwgaZw09g0kMww';
-			var map = L.mapbox.map('map', 'gyenumula.f9fe8b6b')
+			var map = L.mapbox.map('map', 'gyenumula.f9fe8b6b').setView([0, 0], 1);
 		</script>
 	</body>
 </html> 
