--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id='map'></div>
 		<script>
 			L.mapbox.accessToken = 'pk.eyJ1IjoiZ3llbnVtdWxhIiwiYSI6ImNpZzIyMjZoaDE2aTV2NW01dnk0d2dvamMifQ.7j58X0hkqwgaZw09g0kMww';
-			var map = L.mapbox.map('map', 'gyenumula.f9fe8b6b').setView([0, 0], 1);
+			var map = L.mapbox.map('map', 'gyenumula.np7hbnk9').setView([0, 0], 1);
 		</script>
 	</body>
 </html> 
