--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoiZ3llbnVtdWxhIiwiYSI6ImNpZzIyMjZoaDE2aTV2NW01dnk0d2dvamMifQ.7j58X0hkqwgaZw09g0kMww';
-var map = L.mapbox.map('map', 'gopichand.dca35fef')
+var map = L.mapbox.map('map', 'gyenumula.f9fe8b6b')
 
 // Generate a GeoJSON line. You could also load GeoJSON via AJAX
 // or generate it some other way.
