--- a/index.html
+++ b/index.html
@@ -24,6 +24,94 @@
 			map.doubleClickZoom.disable();
 			map.scrollWheelZoom.disable();
 
+		
+			map.on('style.load', 
+				function () {
+    					map.addSource("route", {
+        					"type": "geojson",
+        					"data": {
+            						"type": "Feature",
+            						"properties": {},
+            						"geometry": {
+                						"type": "LineString",
+                						"coordinates": [
+                    							[77.59341,12.97009],
+									[77.59346,12.96994],
+									[77.59298,12.96984],
+									[77.59247,12.97084],
+									[77.58925,12.96812],
+									[77.58847,12.96784],
+									[77.58877,12.96823], 
+									[77.59008,12.97276],
+									[77.58994,12.97326],
+									[77.59041,12.97498],
+									[77.58860,12.97511],
+									[77.58743,12.97583],
+									[77.58834,12.97648],
+									[77.59072,12.97772],
+									[77.59209,12.97665],
+									[77.59393,12.97844],
+									[77.59382,12.97859],
+									[77.59539,12.97992],
+									[77.59589,12.98020],
+									[77.59607,12.98022],
+									[77.59673,12.98017],
+									[77.59698,12.98003],
+									[77.59841,12.97687],
+									[77.59804,12.97696],
+									[77.59722,12.97696],
+									[77.59665,12.97685],
+									[77.59560,12.97695],
+									[77.59521,12.97678],
+									[77.59362,12.97520],
+									[77.59269,12.97507],
+									[77.59109,12.97619],
+									[77.59062,12.97618],
+									[77.59036,12.97601],
+									[77.59019,12.97567],
+									[77.59025,12.97522],
+									[77.59043,12.97500],
+									[77.59113,12.97464],
+									[77.59176,12.97381],
+									[77.59397,12.97217], 
+									[77.59506,12.97350],
+									[77.59928,12.97672],
+									[77.59728,12.98104], 
+									[77.61435,12.97534],
+									[77.61469,12.97634],
+									[77.61847,12.97508],
+									[77.61999,12.97470],
+									[77.62015,12.97589],
+									[77.61768,12.98014],
+									[77.61605,12.98074],
+									[77.61559,12.98142],
+									[77.61563,12.98265],
+									[77.61716,12.98364],
+									[77.61877,12.98537],
+									[77.61985,12.98725],
+									[77.62200,12.98762]
+                						]
+            						}
+        					}
+    					});
+
+    					map.addLayer({
+        					"id": "route",
+        					"type": "line",
+        					"source": "route",
+        					"layout": {
+            						"line-join": "round",
+            						"line-cap": "round"
+        					},
+						"paint": {
+            						"line-color": "#FF884B",
+            						"line-width": 6
+        					}
+    					});
+				});
+		
+		
+		
 			// Generate a GeoJSON line. You could also load GeoJSON via AJAX
 			// or generate it some other way.
 			var geojson = { type: 'LineString', coordinates: [] };
@@ -41,6 +129,16 @@
 			// Add this generated geojson object to the map.
 			L.geoJson(geojson).addTo(map);
 
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 			// Create a counter with a value of 0.
 			var j = 0;
 
@@ -51,6 +149,9 @@
   					})
 				}).addTo(map);
 
+			
+			
+			
 			tick();
 			
 			function tick() {
