--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.marker([0, 0], {
+			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#BB884B'
+    					'marker-color': '#F4E050'
   					})
 				}).addTo(map);
 	
