--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				}
 			var routeStyle = {
     				'color': '#ff7800',
-    				'weight': 15,
+    				'weight': 5,
     				'opacity': 0.65
 			}
 			
@@ -102,7 +102,7 @@
 			// Create a marker and add it to the map.
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#F4E050'
+    					'marker-color': '#F45064'
   					})
 				}).addTo(map);
 	
