--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 					]
 				}
 			var routeStyle = {
-    				'color': '#ff7800',
-    				'weight': 3,
-    				'opacity': 0.65
+    				color: '#ff7800',
+    				weight: 3,
+    				opacity: 0.65
 			}
 			
 			// Add this generated geojson object to the map.
@@ -102,7 +102,7 @@
 			// Create a marker and add it to the map.
 			var marker = L.marker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#F45064'
+    					marker-color: '#F45064'
   					})
 				}).addTo(map);
 	
