--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 				}
 			var routeStyle = {
     				color: '#ff7800',
-    				weight: 3,
-    				opacity: 0.65
+    				weight: 5,
+    				opacity: 0.7
 			}
 			
 			// Add this generated geojson object to the map.
@@ -100,7 +100,7 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.marker([0, 0], {
+			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					marker-color: '#F45064'
   					})
