--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			// Create a marker and add it to the map.
 			var marker = L.Marker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					marker-color: '#F45064'
+    					'marker-color': '#F45064'
   					})
 				}).addTo(map);
 	
@@ -117,7 +117,7 @@
 
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
-    				if (++j < route.coordinates.length) setTimeout(tick, 10);
+    				if (++j < route.coordinates.length) setTimeout(tick, 1000);
 			}
 		</script>
 	</body>
