--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 					]
 				}
 			var routeStyle = {
-    				color: '#ff7800',
-    				weight: 5,
-    				opacity: 0.5
+    				color: '#F4E050',
+    				weight: 6,
+    				opacity: 0.6
 			}
 			
 			// Add this generated geojson object to the map.
