--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					]
 				}
 			var routeStyle = {
-    				color: '#F4E050',
+    				color: '#FAE512',
     				weight: 6,
     				opacity: 0.6
 			}
@@ -117,7 +117,7 @@
 
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
-    				if (++j < route.coordinates.length) setTimeout(tick, 1000);
+    				if (++j < route.coordinates.length) setTimeout(tick, 3000);
 			}
 		</script>
 	</body>
