--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#F45064',
-    					radius: 8
+    					//radius: 8
   					})
 				}).addTo(map);
 	
