--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			// Create a marker and add it to the map.
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#F45064',
+    					'marker-color': '#F45064'
     					//radius: 8
   					})
 				}).addTo(map);
