--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					]
 				}
 			var routeStyle = {
-    				color: '#FAE512',
+    				color: '#FFEE45',
     				weight: 6,
     				opacity: 0.6
 			}
