--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 					]
 				}
 			var routeStyle = {
-    				color: '#FFEE45',
-    				weight: 6,
-    				opacity: 0.6
+    				'color': '#FFEE45',
+    				'weight': 6,
+    				'opacity': 0.6
 			}
 			
 			// Add this generated geojson object to the map.
@@ -103,7 +103,6 @@
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#F45064'
-    					//radius: 8
   					})
 				}).addTo(map);
 	
