--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 						[77.62200,12.98762]
 					]
 				}
-		/*	var routeStyle = {
+			var routeStyle = {
     				'color': '#FFEE45',
     				'weight': 6,
     				'opacity': 0.6
-			}*/
+			}
 			
 			// Add this generated geojson object to the map.
 			L.geoJson(route, {
