--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					]
 				}
 			var routeStyle = {
-    				'color': '#FFEE45',
+    				'color': '#ffee45',
     				'weight': 6,
     				'opacity': 0.3
 			}
@@ -102,7 +102,8 @@
 			// Create a marker and add it to the map.
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#F45064'
+    					'marker-color': '#f45064',
+    					'fillColor': "#f45064"
   					})
 				}).addTo(map);
 	
@@ -117,7 +118,7 @@
 
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
-    				if (++j < route.coordinates.length) setTimeout(tick, 3000);
+    				if (++j < route.coordinates.length) setTimeout(tick, 1000);
 			}
 		</script>
 	</body>
