--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#f45064',
-    					'fillColor': "#f45064"
+    					'fillColor': "#f45064",
+    					'radius': 4
   					})
 				}).addTo(map);
 	
