--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			
 			// Add this generated geojson object to the map.
 			L.geoJson(route, {
-    			//	style: routeStyle
+    				style: routeStyle
 			}).addTo(map);
 
 			// Create a counter with a value of 0.
