--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			var routeStyle = {
     				'color': '#ffee45',
     				'weight': 6,
-    				'opacity': 1
+    				'opacity': 0.6
 			}
 			
 			// Add this generated geojson object to the map.
@@ -103,8 +103,8 @@
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#f45064',
-    					'fillColor': "#f45064",
-    					'radius': 4
+    					'fillColor': '#f45064',
+    					'radius': 10
   					})
 				}).addTo(map);
 	
