--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#f45064',
-    					'fillColor': '#f45064',
-    					'radius': 10
+    					'fillColor': '#f45064'
   					})
 				}).addTo(map);
 	
