--- a/index.html
+++ b/index.html
@@ -85,15 +85,16 @@
 						[77.62200,12.98762]
 					]
 				}
-			var routeStyle = {
-    				'color': '#ffee45',
+		
+		/*	var routeStyle = {
+    		//		'color': '#ffee45',
     				'weight': 6,
     				'opacity': 0.6
 			}
-			
+		*/	
 			// Add this generated geojson object to the map.
 			L.geoJson(route, {
-    				style: routeStyle
+    		//		style: routeStyle
 			}).addTo(map);
 
 			// Create a counter with a value of 0.
