--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 					]
 				}
 		
-		/*	var routeStyle = {
-    		//		'color': '#ffee45',
+			var routeStyle = {
+    				'color': '#ffee45',
     				'weight': 6,
     				'opacity': 0.6
 			}
-		*/	
+			
 			// Add this generated geojson object to the map.
 			L.geoJson(route, {
-    		//		style: routeStyle
+    				style: routeStyle
 			}).addTo(map);
 
 			// Create a counter with a value of 0.
@@ -119,7 +119,7 @@
 
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
-    				if (++j < route.coordinates.length) setTimeout(tick, 1000);
+    				if (++j < route.coordinates.length) setTimeout(tick, 500);
 			}
 		</script>
 	</body>
