--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 				}
 		
 			var routeStyle = {
-    				'color': '#ffee45',
-    				'weight': 6,
-    				'opacity': 0.6
+    				color: '#ffee45',
+    				weight: 5,
+    				opacity: 0.6
 			}
 			
 			// Add this generated geojson object to the map.
