--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				}
 		
 			var routeStyle = {
-    				color: '#ffee45',
+    				color: '#f45064',
     				weight: 5,
     				opacity: 0.6
 			}
@@ -103,8 +103,8 @@
 			// Create a marker and add it to the map.
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					'marker-color': '#f45064',
-    					'fillColor': '#f45064'
+    					marker-color: '#f4E050',
+    					fillColor: '#f4E050'
   					})
 				}).addTo(map);
 	
