--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 			// Create a marker and add it to the map.
 			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
-    					marker-color: '#f4E050',
-    					fillColor: '#f4E050'
+    					marker-color: '#f4E050'
   					})
 				}).addTo(map);
 	
