--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.circleMarker([0, 0], {
+			var marker = L.marker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					marker-color: '#f4E050'
   					})
