--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.marker([0, 0], {
+			var marker = L.circleMarker([0, 0], {
   				icon: L.mapbox.marker.icon({
     					'marker-color': '#f4E050'
+    					'radius':5;
   					})
 				}).addTo(map);
 	
