--- a/index.html
+++ b/index.html
@@ -101,12 +101,9 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.circleMarker([0, 0], {
-  				icon: L.mapbox.marker.icon({
-    					'marker-color': '#f4E050'
-    					'radius':5;
-  					})
-				}).addTo(map);
+			var marker = L.circleMarker([0, 0],
+  						    'fillColor': '#f4E050'
+  					).addTo(map);
 	
 			tick();
 			
