--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.circleMarker([0, 0],
-  						    'fillColor': '#f4E050'
-  					).addTo(map);
+			var marker = L.circleMarker([0, 0], {
+  					icon: L.mapbox.marker.icon({
+    						'marker-color': '#f86767'
+  					})
+				}).addTo(map);
 	
 			tick();
 			
