--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     				'style': routeStyle
 			}).addTo(map);
 
-			// Create a counter with a value of 0.
+		/*	// Create a counter with a value of 0.
 			var j = 0;
 
 			// Create a marker and add it to the map.
@@ -119,7 +119,7 @@
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
     				if (++j < route.coordinates.length) setTimeout(tick, 1000);
-			}
+			}*/
 		</script>
 	</body>
 </html>
