--- a/index.html
+++ b/index.html
@@ -97,16 +97,19 @@
     				'style': routeStyle
 			}).addTo(map);
 
-		/*	// Create a counter with a value of 0.
+			// Create a counter with a value of 0.
 			var j = 0;
 
 			// Create a marker and add it to the map.
-			var marker = L.marker([0, 0], {
+		/*	var marker = L.marker([0, 0], {
   					icon: L.mapbox.marker.icon({
     						'marker-color': '#f86767'
   					})
-				}).addTo(map);
-	
+				}).addTo(map);*/
+			
+			var marker = L.circleMarker([0, 0], 6
+  					).addTo(map);
+
 			tick();
 			
 			function tick() {
@@ -119,7 +122,7 @@
     				// Move to the next point of the line
     				// until `j` reaches the length of the array.
     				if (++j < route.coordinates.length) setTimeout(tick, 1000);
-			}*/
+			}
 		</script>
 	</body>
 </html>
