--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
   					})
 				}).addTo(map);*/
 			
-			var marker = L.circleMarker([0, 0], 6
-  					).addTo(map);
+			var marker = L.circleMarker([0, 0]).addTo(map);
 
 			tick();
 			
