--- a/index.html
+++ b/index.html
@@ -101,14 +101,9 @@
 			var j = 0;
 
 			// Create a marker and add it to the map.
-		/*	var marker = L.marker([0, 0], {
-  					icon: L.mapbox.marker.icon({
-    						'marker-color': '#f86767'
-  					})
-				}).addTo(map);*/
-			
-			var marker = L.circleMarker([0, 0]).addTo(map);
 
+			var marker = L.circleMarker([0, 0]).addTo(map);
+			marker.setRadius(4);
 			tick();
 			
 			function tick() {
