--- a/index.html
+++ b/index.html
@@ -23,70 +23,88 @@
 			map.touchZoom.disable();
 			map.doubleClickZoom.disable();
 			map.scrollWheelZoom.disable();
+			
+			var iconLayer = L.mapbox.featureLayer().addTo(map);
+			
+			var runner = {
+    				'type': 'Feature',
+    				'geometry': {
+					'type': 'Point',
+					'coordinates': [77.59341,12.97009]
+    				},
+    				'properties': {
+        				'title': 'Gopi Chand',
+        				'icon': {
+            					'iconUrl': 'https://raw.githubusercontent.com/gyenumula/blr-marathon/gh-pages/runner.png',
+            					'iconSize': [30, 30], 
+            					'iconAnchor': [15, 15], 
+            					'popupAnchor': [0, -15], 
+            					'className': 'dot'
+        				}
+    				}
+			};
 
-			// Generate a GeoJSON line. You could also load GeoJSON via AJAX
-			// or generate it some other way.
 			var route = { 
-					'type': 'LineString', 
-					'coordinates': [
-						[77.59341,12.97009],
-						[77.59346,12.96994],
-						[77.59298,12.96984],
-						[77.59247,12.97084],
-						[77.58925,12.96812],
-						[77.58847,12.96784],
-						[77.58877,12.96823],
-						[77.59008,12.97276],
-						[77.58994,12.97326],
-						[77.59011,12.97405],
-						[77.58869,12.97436],
-						[77.58858,12.97447],
-						[77.58860,12.97511],
-						[77.58743,12.97583],
-						[77.58834,12.97648],
-						[77.59072,12.97772],
-						[77.59253,12.97970],
-						[77.59382,12.97859],
-						[77.59539,12.97992],
-						[77.59589,12.98020],
-						[77.59607,12.98022],
-						[77.59673,12.98017],
-						[77.59698,12.98003],
-						[77.59841,12.97687],
-						[77.59804,12.97696],
-						[77.59722,12.97696],
-						[77.59665,12.97685],
-						[77.59560,12.97695],
-						[77.59521,12.97678],
-						[77.59362,12.97520],
-						[77.59269,12.97507],
-						[77.59109,12.97619],
-						[77.59062,12.97618],
-						[77.59036,12.97601],
-						[77.59019,12.97567],
-						[77.59025,12.97522],
-						[77.59043,12.97500],
-						[77.59113,12.97464],
-						[77.59176,12.97381],
-						[77.59397,12.97217],
-						[77.59506,12.97350],
-						[77.59928,12.97672],
-						[77.59728,12.98104],
-						[77.61435,12.97534],
-						[77.61469,12.97634],
-						[77.61847,12.97508],
-						[77.61999,12.97470],
-						[77.62015,12.97589],
-						[77.61768,12.98014],
-						[77.61605,12.98074],
-						[77.61559,12.98142],
-						[77.61563,12.98265],
-						[77.61716,12.98364],
-						[77.61877,12.98537],
-						[77.61985,12.98725],
-						[77.62200,12.98762]
-					]
-				};
+				'type': 'LineString', 
+				'coordinates': [
+					[77.59341,12.97009],
+					[77.59346,12.96994],
+					[77.59298,12.96984],
+					[77.59247,12.97084],
+					[77.58925,12.96812],
+					[77.58847,12.96784],
+					[77.58877,12.96823],
+					[77.59008,12.97276],
+					[77.58994,12.97326],
+					[77.59011,12.97405],
+					[77.58869,12.97436],
+					[77.58858,12.97447],
+					[77.58860,12.97511],
+					[77.58743,12.97583],
+					[77.58834,12.97648],
+					[77.59072,12.97772],
+					[77.59253,12.97970],
+					[77.59382,12.97859],
+					[77.59539,12.97992],
+					[77.59589,12.98020],
+					[77.59607,12.98022],
+					[77.59673,12.98017],
+					[77.59698,12.98003],
+					[77.59841,12.97687],
+					[77.59804,12.97696],
+					[77.59722,12.97696],
+					[77.59665,12.97685],
+					[77.59560,12.97695],
+					[77.59521,12.97678],
+					[77.59362,12.97520],
+					[77.59269,12.97507],
+					[77.59109,12.97619],
+					[77.59062,12.97618],
+					[77.59036,12.97601],
+					[77.59019,12.97567],
+					[77.59025,12.97522],
+					[77.59043,12.97500],
+					[77.59113,12.97464],
+					[77.59176,12.97381],
+					[77.59397,12.97217],
+					[77.59506,12.97350],
+					[77.59928,12.97672],
+					[77.59728,12.98104],
+					[77.61435,12.97534],
+					[77.61469,12.97634],
+					[77.61847,12.97508],
+					[77.61999,12.97470],
+					[77.62015,12.97589],
+					[77.61768,12.98014],
+					[77.61605,12.98074],
+					[77.61559,12.98142],
+					[77.61563,12.98265],
+					[77.61716,12.98364],
+					[77.61877,12.98537],
+					[77.61985,12.98725],
+					[77.62200,12.98762]
+				]
+			};
 		
 			var routeStyle = {
     				'color': '#f45064',
@@ -99,24 +117,32 @@
     				'style': routeStyle
 			}).addTo(map);
 
-			// Create a counter with a value of 0.
-			var j = 0;
+			// Set a custom icon on each marker based on feature properties.
+			iconLayer.on('layeradd', function(e) {
+    				var marker = e.layer,
+        			feature = marker.feature;
 
+				 marker.setIcon(L.icon(feature.properties.icon));
+			});
+			
+			// Add features to the map.
+			iconLayer.setGeoJSON(runner);
+
+			
 			// Create a marker and add it to the map.
-
-			var marker = L.circleMarker([0, 0]).addTo(map);
-			marker.setRadius(4);
+		/*	var marker = L.circleMarker([0, 0]).addTo(map);
+			marker.setRadius(4);*/
+			
+			
 			tick();
 			
+			var j = 0;
+			
 			function tick() {
-    				// Set the marker to be at the same point as one
-    				// of the segments or the line.
     				marker.setLatLng(L.latLng(
         				route.coordinates[j][1],
         				route.coordinates[j][0]));
 
-    				// Move to the next point of the line
-    				// until `j` reaches the length of the array.
     				if (++j < route.coordinates.length) setTimeout(tick, 500);
 			}
 		</script>
